--- a/grid.css
+++ b/grid.css
@@ -8,12 +8,28 @@
     border-collapse:collapse }
 .grid td {
     cursor:pointer;
-    width:2.5%; height:5%;
+    /*width:2.5%; height:5%; */
     border:1px solid #ccc;
     text-align:center;
     font-family:sans-serif; font-size:13px
 }
-.grid td.clicked {
-    background-color:yellow;
-    font-weight:bold; color:red;
+.grid td.I {
+    background-color:red;
+    opacity: .3;
+    filter: alpha(opacity=30);
+}
+.grid td.S {
+    background-color: #E6E6F4;
+    opacity: .3;
+    filter: alpha(opacity=30);
+}
+.grid td.D {
+    background-color: black;
+    opacity: .3;
+    filter: alpha(opacity=30);
+}
+.grid td.R {
+    background-color: green;
+    opacity: .3;
+    filter: alpha(opacity=30);
 }
