--- a/grid.css
+++ b/grid.css
@@ -13,12 +13,27 @@
     text-align:center;
     font-family:sans-serif; font-size:13px
 }
-.grid td.I {
+.grid td[state="I"] {
     background-color:red;
     opacity: .3;
     filter: alpha(opacity=30);
 }
-.grid td.S {
+grid td[state="S"] {
+    background-color: #E6E6F4;
+    opacity: .3;
+    filter: alpha(opacity=30);
+}
+.grid td[state="D"] {
+    background-color: black;
+    opacity: .3;
+    filter: alpha(opacity=30);
+}
+.grid td[state="R"] {
+    background-color: green;
+    opacity: .3;
+    filter: alpha(opacity=30);
+}
+/*.grid td.S {
     background-color: #E6E6F4;
     opacity: .3;
     filter: alpha(opacity=30);
@@ -32,4 +47,4 @@
     background-color: green;
     opacity: .3;
     filter: alpha(opacity=30);
-}
+}*/
