--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@ margin: 0;
 padding: 0;
 }
 
+.invisible {
+    display: none;
+}
+
+#container {
+    width: 100%;
+    height: 100%;
+}
+
 #floating{
 position:fixed;
 top:15px;
